<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.nakhmadov.todo_app.screens.statistics.StatisticsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.statistics.StatisticsFragment">

        <TextView
            android:id="@+id/all_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_spacing"
            android:text="@string/all_tasks"
            android:textColor="@color/textGrayColor"
            android:textSize="22sp"
            app:layout_constraintEnd_toStartOf="@+id/all"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_spacing"
            android:layout_marginTop="@dimen/normal_spacing"
            android:text="@{viewModel.allCount}"
            android:textColor="@color/textGrayColor"
            android:textSize="22sp"
            app:layout_constraintEnd_toStartOf="@+id/tire"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/all_label"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="25" />

        <TextView
            android:id="@+id/tire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_spacing"
            android:layout_marginTop="@dimen/normal_spacing"
            android:layout_marginEnd="@dimen/small_spacing"
            android:text="@string/Defis"
            android:textColor="@color/textGrayColor"
            android:textSize="22sp"
            app:layout_constraintEnd_toStartOf="@+id/all_percentage"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/all"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/all_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_spacing"
            android:text="@string/hundred_percent"
            android:textColor="@color/textGrayColor"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/tire"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/active_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_spacing"
            android:text="@string/active_tasks"
            android:textColor="@color/textGrayColor"
            android:textSize="22sp"
            app:layout_constraintEnd_toStartOf="@+id/active"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/all_label" />

        <TextView
            android:id="@+id/active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_spacing"
            android:layout_marginTop="@dimen/normal_spacing"
            android:text="@{viewModel.activeCount}"
            android:textColor="@color/textGrayColor"
            android:textSize="22sp"
            app:layout_constraintEnd_toStartOf="@+id/tire_active"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/active_label"

            app:layout_constraintTop_toBottomOf="@+id/all_label"
            tools:text="25" />

        <TextView
            android:id="@+id/tire_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_spacing"
            android:layout_marginTop="@dimen/normal_spacing"
            android:layout_marginEnd="@dimen/small_spacing"
            android:text="@string/Defis"
            android:textColor="@color/textGrayColor"
            android:textSize="22sp"
            app:layout_constraintEnd_toStartOf="@+id/active_percentage"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/active"
            app:layout_constraintTop_toBottomOf="@+id/all_label" />

        <TextView
            android:id="@+id/active_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_spacing"
            android:textColor="@color/textGrayColor"
            android:textSize="22sp"
            android:text="@{viewModel.activePercent}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/tire_active"
            app:layout_constraintTop_toBottomOf="@+id/all_label"
            tools:text="100.0%" />





        <TextView
            android:id="@+id/completed_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_spacing"
            android:text="@string/completed_tasks"
            android:textColor="@color/textGrayColor"
            android:textSize="22sp"
            app:layout_constraintEnd_toStartOf="@+id/completed"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/active_label" />

        <TextView
            android:id="@+id/completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_spacing"
            android:layout_marginTop="@dimen/normal_spacing"
            android:text="@{viewModel.completedCount}"
            android:textColor="@color/textGrayColor"
            android:textSize="22sp"
            app:layout_constraintEnd_toStartOf="@+id/tire_completed"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/completed_label"

            app:layout_constraintTop_toBottomOf="@+id/active_label"
            tools:text="25" />

        <TextView
            android:id="@+id/tire_completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_spacing"
            android:layout_marginTop="@dimen/normal_spacing"
            android:layout_marginEnd="@dimen/small_spacing"
            android:text="@string/Defis"
            android:textColor="@color/textGrayColor"
            android:textSize="22sp"
            app:layout_constraintEnd_toStartOf="@+id/completed_percentage"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/completed"
            app:layout_constraintTop_toBottomOf="@+id/active_label" />

        <TextView
            android:id="@+id/completed_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_spacing"
            android:textColor="@color/textGrayColor"
            android:textSize="22sp"
            android:text="@{viewModel.completedPercent}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/tire_completed"
            app:layout_constraintTop_toBottomOf="@+id/active_label"
            tools:text="100.0%" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>